@@ -1,4 +1,5 @@
 {{$NEXT}}
+- hopefully fix nonetwork.t under Win32
 
 1.06      2013-03-01 15:49:54 Europe/London
 - better work around exceptions in File::ChangeNotify
